...
            preferAlgoritmo = true,
            preferFuncion = true,
            enableParaCada = true,
            protectParaCounter = true
        )

        val Estricto = PSeIntProfile(
            name = "Estricto",
            description = "Exige declarar e inicializar variables, usar ; y asignar con <-. Arreglos en base 0.",
            allowImplicitVariables = false,
            requireSemicolons = true,
            allowEqualsAssignment = false,
            forceDefineVariables = true,
...
